--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Employees Management System</title>
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+
 </head>
 <body>
 
 
-<div align="center">
+<div class="container my-2">
     <h1> Employees List </h1>
-    <table>
+    <table border="1" class = "table table-striped table-responsive-md">
         <thead>
             <tr>
                 <th>Employee First Name</th>
