--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Employees Management System</title>
@@ -13,8 +13,11 @@
 <body>
 
 
-<div class="container my-2">
+<  class="container my-2">
+
     <h1> Employees List </h1>
+
+    <a th:href = "@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee</a>
     <table border="1" class = "table table-striped table-responsive-md">
         <thead>
             <tr>
