--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<  class="container my-2">
+<div class="container my-2">
 
     <h1> Employees List </h1>
 
@@ -24,6 +24,7 @@
                 <th>Employee First Name</th>
                 <th>Employee Last Name</th>
                 <th>Employee Email</th>
+                <th> Actions </th>
             </tr>
         </thead>
         <tbody>
@@ -31,6 +32,7 @@
                 <td th:text="${employee.firstName}"></td>
                 <td th:text="${employee.lastName}"></td>
                 <td th:text="${employee.email}"></td>
+                <td> <a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary">Update</a></td>
             </tr>
 
         </tbody>
