--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -14,7 +14,17 @@
         <h1>Employee Management System</h1>
         <hr>
         <h2>Save Employee</h2>
-        <form></form>
+        <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="post">
+            <input type="text" th:field="*{firstName}"
+                   placeholder="Employee First Name" class="form-control mb-4 col-4">
+            <input type="text" th:field="*{lastName}"
+                   placeholder="Employee Last Name" class="form-control mb-4 col-4">
+            <input type="text" th:field="*{email}"
+                   placeholder="Employee Email" class="form-control mb-4 col-4">
+            <button type="submit" class="btn btn-info col-2"> Save Employee</button>
+        </form>
+
+        <a th:href = "@{/}"> Back to Employee List</a>
     </div>
 </body>
 </html>
